--- a/QPD.AddressStandardizer/QPD.AddressStandardizer.csproj
+++ b/QPD.AddressStandardizer/QPD.AddressStandardizer.csproj
@@ -7,4 +7,8 @@
     <UserSecretsId>44fe99ad-d4ee-4024-9391-4c3021c1d1e1</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
