Implove configuration work

--- a/QPD.AddressStandardizer/appsettings.json
+++ b/QPD.AddressStandardizer/appsettings.json
@@ -6,7 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Uri": "https://cleaner.dadata.ru/api/v1/clean/address",
-  "ApiKey": "",
-  "Secret": ""
+  "Api": {
+    "Uri": "https://cleaner.dadata.ru/api/v1/clean/address",
+    "Key": "",
+    "Secret": ""
+  }
 }
